istio-feature-demos/sentiment-analyzer-app/blue-green/istio-manifests/traffic-routing/virtualservice-50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /callback
    - uri:
        prefix: /static
    - uri:
        regex: '^.*\.(ico|png|jpg)$'
    route:
    - destination:
        host: sa-frontend
        port:
          number: 80
      weight: 50
    - destination:
        host: sa-frontend-green
        port:
          number: 80
      weight: 50
